Fixed outing grid, changed wrapper so outing background is full bleed moved footer to seperate component

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -30,7 +30,6 @@ h1 {
   color: $accent-color;
   margin: 0;
   letter-spacing: -3px;
-  text-shadow: 2px 2px rgb(110, 27, 27);
 }
 
 h2 {
@@ -91,12 +90,18 @@ button {
 .gridContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, min-content);
+  grid-template-rows: repeat(4, min-content);
   gap: 5px;
   grid-template-areas:
     "introduction introduction introduction"
     "got heart hp"
-    "message message message";
+    "message message message"
+    "outing outing outing";
+}
+
+.outing{
+  grid-area: outing;
+  background-color: $dark-color;
 }
 
 .app{
@@ -173,6 +178,7 @@ button {
 
 footer {
   background-color: $dark-color;
+  border-top: 2px solid $accent-color;
   color: $light-color;
   text-align: center;
   min-height: 4vh;
