--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -218,7 +218,6 @@ h1 {
   color: #d0a360;
   margin: 0;
   letter-spacing: -3px;
-  text-shadow: 2px 2px #6e1b1b;
 }
 
 h2 {
@@ -286,11 +285,19 @@ button:focus {
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: (min-content)[3];
-      grid-template-rows: repeat(3, -webkit-min-content);
-      grid-template-rows: repeat(3, min-content);
+  -ms-grid-rows: (min-content)[4];
+      grid-template-rows: repeat(4, -webkit-min-content);
+      grid-template-rows: repeat(4, min-content);
   gap: 5px;
-      grid-template-areas: "introduction introduction introduction" "got heart hp" "message message message";
+      grid-template-areas: "introduction introduction introduction" "got heart hp" "message message message" "outing outing outing";
+}
+
+.outing {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: outing;
+  background-color: #171c20;
 }
 
 .app {
@@ -384,6 +391,7 @@ button:focus {
 
 footer {
   background-color: #171c20;
+  border-top: 2px solid #d0a360;
   color: #e4e4df;
   text-align: center;
   min-height: 4vh;
@@ -407,8 +415,11 @@ footer span {
 }
 
 .outing .title {
-  margin: 5% 0;
-  text-shadow: 4px 3px 3px #e4e4df;
+  font-size: 5rem;
+  text-align: center;
+  padding: 20px;
+  color: #d0a360;
+  border: none;
 }
 
 .outing .outingSuggestions ul {
@@ -423,7 +434,8 @@ footer span {
 }
 
 .outing .outingSuggestions ul .restaurantImg {
-  width: 50%;
+  min-width: 200px;
+  min-height: 200px;
   border-radius: 50%;
   border: 5px solid #d0a360;
 }
@@ -443,7 +455,9 @@ footer span {
   width: 100%;
 }
 
-.outing .outingSuggestions ul li .restaurantInfo h3, .outing .outingSuggestions ul li .restaurantInfo h4, .outing .outingSuggestions ul li .restaurantInfo h5 {
+.outing .outingSuggestions ul li .restaurantInfo h3,
+.outing .outingSuggestions ul li .restaurantInfo h4,
+.outing .outingSuggestions ul li .restaurantInfo h5 {
   margin: 5%;
   margin-left: 5%;
 }
